			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

25-Jan-2006
~~~~~~~~~~~
Make sure all the help message is translatable (Stephen Watson, reported
by Andras Mohari).

10-Jan-2006
~~~~~~~~~~~
Use a monospace font for the size and permissions columsn in the list view
(Andras Mohari).

30-Dec-2005 (Release 2.4.1)
~~~~~~~~~~~
Updated Estonian translation (Teet Tärno).

29-Dec-2005
~~~~~~~~~~~
Some .desktop files put ".png" after the icon name, which prevents the icon
from being found. Ignore it (Thomass Leonard; reported by Peter).

28-Dec-2005
~~~~~~~~~~~
Updated Hungarian translation (Andras Mohari).

27-Dec-2005
~~~~~~~~~~~
If we can't find libc.so.6 for xattr support, try libc.so in case we only have
uClib (Lucas Correia Villa Real).

18-Dec-2005
~~~~~~~~~~~
Allow .desktop files to be used as run actions (Thomas Leonard).

17-Dec-2005
~~~~~~~~~~~
Bugfix: New detail crashes cleanice theme (reported by Andras Mohari; reported
	as CleanIce bug #1383457). Try another value...

16-Dec-2005
~~~~~~~~~~~
Highlight icons using the theme's preferred colour instead of always using
blue (Andras Mohari).
Bugfix: Don't set style detail to "base" when highlighting items in a
	Collection, as it confuses GTK's lighthouseblue theme engine
	(Thomas Leonard).

15-Dec-2005
~~~~~~~~~~~
Bugfix: Changing the display style crashes the filer with GTK >= 2.8.9 because
	it sends a selection changed event before the view has finished
	initialising (Thomas Leonard; reported by Tobias Kieslich).
Removed some done entries from the TODO file (Stephen Watson).

13-Dec-2005 (Release 2.4)
~~~~~~~~~~~
Updated Chinese translations (Babyfai Cheung).

11-Dec-2005
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Make Path optional in PanelRemove SOAP call, allowing removal of items based
only on their label (Jonatan Liljedahl).
Bugfix: The install script failed to compile ROX-Filer on Debian systems, due
	to a bug in recent versions of xterm (Vincent Lefèvre). Added a