@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+29-Jan-2006
+~~~~~~~~~~~
+When iconfiying a window, try to find space on the pinboard of the current
+screen first (Tony Houghton).
+
 25-Jan-2006
 ~~~~~~~~~~~
 Make sure all the help message is translatable (Stephen Watson, reported
